2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* file.c, html.h, url.c: decode content-encoding in all situations.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* main.c: delete calls to GC from wrap_GC_warn_proc to avoid deadlocks.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* main.c: fix unsafe usages of SIGWINCH handler.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* keybind(_lynx).c, doc(-jp)/keymap.default: add SHIFT-TAB as a default binding for PREV_LINK.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04154] Unclosed textarea in table
	* table.c: close textarea when table related tags found.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04153] NEXT_LINK error
	* anchor.c, filc.c, fm.h: check A tag in HTMLlineproc2body().

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04152] [PATCH] Add more explanation for the usage of the option setting panel.
	* doc(-jp)/FAQ.html, doc-jp/MANUAL.html: add explanations for .w3m/config and -o option.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04150] vi-prec_num
	* main.c: fix vi_prec_num switching.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04146] disable HAVE_LANGINFO_CODESET on cygwin
	* configure.ac: avoid AM_LANGINFO_CODESET check for Cygwin.

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* file.c, fm.h, rc.c: Introduce option show_cookie and set it TRUE by default. If set to FALSE received cookies will not be shown.
	* This fixes Debian bug #253547: w3m: Too slow receiving cookies.

2006-04-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01060] Some patches
	* parsetagx.c: Replace '\n' (newline) with ' ' (space) in attributes of html tags instead of ignoring them.
	* Fixes Debian bug #326167: w3m: new lines in hidden form fields are stripped

2006-04-07  Dai Sato  <satodai@w3m.jp>
